Path check